<resources>
    <string name="app_name">Discover Cluj</string>
    <string name="facebook_app_id">2076914259191184</string>
    <string name="title_activity_maps">Map</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="title_activity_add_location">Map</string>
    <string name="no_review_warning">You didn\'t leave any review yet</string>
    <string name="add_review_now">Add review now</string>
    <string name="tell_us_what_you_think_about_this_place">Tell us what you think about this place</string>
    <string name="www_mrv_it_ro">www.mrv-it.ro</string>
    <string name="posts">POSTS</string>
    <string name="about">ABOUT</string>
    <string name="reviews">Reviews</string>
    <string name="news_feed">News Feed</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="newPassword">new password</string>
    <string name="oldPassword">old password</string>
    <string name="title_activity_admin_map">Map</string>

</resources>
