<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nestedScrollView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PublicLocationProfile"
    android:background="@color/lightGray"
    android:theme="@style/LocationProfileEdge">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <View
            android:id="@+id/coverPhoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/AdminDarkBlue"
            />
        <ImageView
            android:layout_width="92dp"
            android:layout_height="92dp"
            app:srcCompat="@drawable/back_icon"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:onClick="goBack"/>
        <ImageView
            android:id="@+id/bookmarkImageView"
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:srcCompat="@drawable/not_favorite"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_alignParentEnd="true"
            android:onClick="toggleFavorite"
            />

        <RelativeLayout
            android:id="@+id/profile_topPanel"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:layout_below="@+id/coverPhoto"
            android:background="@color/white"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="32dp">
            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"/>
            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileName"
                android:textColor="#3f3f3f"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/category"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:textColor="@color/AdminBlue"/>
            <View
                android:id="@+id/separatorView"
                android:layout_width="2dp"
                android:layout_height="18dp"
                android:background="@color/lightGray"
                android:layout_below="@+id/location"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"/>
            <TextView
                android:id="@+id/followersNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/separatorView"
                android:layout_below="@+id/location"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/viewsNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/separatorView"
                android:layout_below="@+id/location"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:textColor="@color/black"/>
            <RatingBar
                android:id="@+id/locationRating"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:theme="@style/RatingBar"
                android:numStars="5"
                android:layout_below="@+id/viewsNumber"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                >
                <Button
                    android:id="@+id/posts_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3333"
                    android:layout_margin="0dp"
                    android:background="@color/CustomTabLayoutActive"
                    android:textColor="@color/white"
                    android:text="@string/posts"
                    android:onClick="toggleScreen"
                    android:tag="0"
                    />
                <Button
                    android:id="@+id/about_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3333"
                    android:layout_margin="0dp"
                    android:background="@color/white"
                    android:textColor="@color/AdminDarkBlue"
                    android:text="@string/about"
                    android:onClick="toggleScreen"
                    android:tag="1"
                    />
                <Button
                    android:id="@+id/reviews_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3333"
                    android:layout_margin="0dp"
                    android:background="@color/white"
                    android:textColor="@color/AdminDarkBlue"
                    android:text="@string/reviews"
                    android:onClick="toggleScreen"
                    android:tag="2"
                    />
            </LinearLayout>

        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/public_profile_image"
            android:layout_marginTop="125dp"
            android:layout_centerHorizontal="true"
            />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_topPanel"
            android:id="@+id/profile_posts_recyclerView"
            android:layout_marginBottom="45dp"
            android:layout_marginTop="18dp"/>
        <RelativeLayout
            android:id="@+id/about_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_topPanel"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:gravity="left">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        app:srcCompat="@drawable/phone"/>
                    <TextView
                        android:id="@+id/phoneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:gravity="left">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        app:srcCompat="@drawable/web"/>
                    <TextView
                        android:id="@+id/websiteAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:text="@string/www_mrv_it_ro"
                        android:textColor="@color/black"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold"
                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/locationDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="32dp"
                    />

            </LinearLayout>

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/reviewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_topPanel"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <RelativeLayout
                    android:id="@+id/addReviewRequestLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/add_review_request"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="60dp"
                        android:text="@string/no_review_warning"
                        android:textAlignment="center"
                        android:textColor="@color/darkGray"
                        android:textSize="18sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/add_review_request"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="32dp"
                        android:background="@color/AdminDarkBlue"
                        android:onClick="requestReview"
                        android:padding="12dp"
                        android:text="@string/add_review_now"
                        android:layout_marginBottom="16dp"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/addReviewLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RatingBar
                        android:id="@+id/toAddRatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:theme="@style/RatingBar"
                        />
                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/toAddRatingBar"
                        android:id="@+id/reviewDescriptionWrapper"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp">
                        <EditText
                            android:id="@+id/toAddReviewDescription"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:inputType="textMultiLine"
                            android:textColor="@color/AdminDarkBlue"
                            android:textColorHint="@color/darkGray"
                            android:backgroundTint="@color/darkGray"
                            android:textSize="16sp"
                            android:hint="@string/tell_us_what_you_think_about_this_place"/>
                    </ScrollView>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/reviewDescriptionWrapper"
                        android:layout_marginTop="12dp"
                        android:layout_centerHorizontal="true"
                        android:background="@color/AdminDarkBlue"
                        android:text="Save review"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="6dp"
                        android:paddingTop="6dp"
                        android:layout_marginBottom="16dp"
                        android:onClick="saveReview"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/usersReviewLayout">
                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/usersRating"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:theme="@style/RatingBar"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/usersSavedReview"
                        android:layout_below="@+id/usersRating"
                        android:textColor="@color/AdminDarkBlue"
                        android:layout_marginTop="24dp"
                        android:layout_centerHorizontal="true"
                        android:textAlignment="center"/>

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:srcCompat="@drawable/review_added"
                        android:layout_below="@id/usersSavedReview"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="12dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_recyclerView"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                />
        </LinearLayout>



    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>